--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,4 +56,23 @@
         android:textStyle="bold"
         android:fontFamily="sans-serif-condensed"/>
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:onClick="tabbedActivityClick"
+        android:padding="10dp"
+        android:shadowColor="@android:color/white"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="10"
+        android:text="test tabs"
+        android:textColor="#A5BE37"
+        android:textSize="65sp"
+        android:textStyle="bold"
+        android:layout_below="@+id/adoptCatTextView"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
