--- a/app/src/main/res/layout/activity_tabbed.xml
+++ b/app/src/main/res/layout/activity_tabbed.xml
@@ -12,17 +12,15 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/appbar_padding_top"
-        android:theme="@style/AppBarOverlay">
+        android:paddingTop="@dimen/appbar_padding_top">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            android:title="Available Pets"
+            app:layout_scrollFlags="scroll|enterAlways">
 
         </android.support.v7.widget.Toolbar>
 
@@ -30,9 +28,10 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabIndicatorColor="#A5BE37"
-            app:tabSelectedTextColor="#A5BE37"
-            app:tabTextColor="#D5582D"/>
+            app:tabIndicatorColor="@color/colorAccent"
+            app:tabSelectedTextColor="#ffffff"
+            app:tabIndicatorHeight="3dp"
+            app:tabTextColor="#ffffff"/>
 
     </android.support.design.widget.AppBarLayout>
 
