--- a/app/src/main/res/layout/activity_tabbed.xml
+++ b/app/src/main/res/layout/activity_tabbed.xml
@@ -14,24 +14,14 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/appbar_padding_top">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            android:title="Available Pets"
-            app:layout_scrollFlags="scroll|enterAlways">
-
-        </android.support.v7.widget.Toolbar>
-
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabIndicatorColor="@color/colorAccent"
-            app:tabSelectedTextColor="#ffffff"
+            app:tabSelectedTextColor="#000000"
             app:tabIndicatorHeight="3dp"
-            app:tabTextColor="#ffffff"/>
+            app:tabTextColor="#000000"/>
 
     </android.support.design.widget.AppBarLayout>
 
