--- a/app/src/main/res/layout/fragment_tabbed.xml
+++ b/app/src/main/res/layout/fragment_tabbed.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -22,7 +23,7 @@
                 android:id="@+id/Image"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_weight="5"
                 android:cropToPadding="false"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/ic_launcher" />
@@ -34,15 +35,60 @@
                 android:layout_below="@id/Image"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:shadowColor="@android:color/black"
-                android:shadowDx="2"
-                android:shadowDy="2"
-                android:shadowRadius="10"
-                android:text="test"
-                android:textColor="#D5582D"
-                android:textSize="50dp"
+                android:text="Name"
+                android:textColor="@color/colorPrimary"
+                android:textSize="34sp"
                 android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/energyLevel"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_below="@id/Image"
+                android:layout_weight="1"
+                android:gravity="left|center"
+                android:text="Energy Level"
+                android:textAppearance="@style/InfoFont"/>
+
+            <TextView
+                android:id="@+id/childLevel"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_below="@id/Image"
+                android:layout_weight="1"
+                android:gravity="left|center"
+                android:text="Child Level"
+                android:textAppearance="@style/InfoFont" />
+
+            <TextView
+                android:id="@+id/catLevel"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_below="@id/Image"
+                android:layout_weight="1"
+                android:gravity="left|center"
+                android:text="Cat Level"
+                android:textAppearance="@style/InfoFont" />
+
+            <TextView
+                android:id="@+id/dogLevel"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_below="@id/Image"
+                android:layout_weight="1"
+                android:gravity="left|center"
+                android:text="Dog Level"
+                android:textAppearance="@style/InfoFont" />
+
+            <TextView
+                android:id="@+id/homeAlone"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_below="@id/Image"
+                android:layout_weight="1"
+                android:gravity="left|center"
+                android:text="Home Alone Level"
+                android:textAppearance="@style/InfoFont" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
