--- a/app/src/main/res/layout/fragment_tabbed.xml
+++ b/app/src/main/res/layout/fragment_tabbed.xml
@@ -1,29 +1,36 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cardList"
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true">
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_margin="0dp"
+        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="0dp"
+        app:contentPadding="15dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/Image"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="5"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_gravity="center"
+                android:layout_weight="7"
                 android:cropToPadding="false"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/ic_launcher" />
@@ -31,29 +38,29 @@
             <TextView
                 android:id="@+id/NameTextView"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@id/Image"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="Name"
-                android:textColor="@color/colorPrimary"
-                android:textSize="34sp"
+                android:textColor="#111111"
+                android:textSize="24sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/energyLevel"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@id/Image"
                 android:layout_weight="1"
                 android:gravity="left|center"
                 android:text="Energy Level"
-                android:textAppearance="@style/InfoFont"/>
+                android:textAppearance="@style/InfoFont" />
 
             <TextView
                 android:id="@+id/childLevel"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@id/Image"
                 android:layout_weight="1"
                 android:gravity="left|center"
@@ -61,19 +68,9 @@
                 android:textAppearance="@style/InfoFont" />
 
             <TextView
-                android:id="@+id/catLevel"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_below="@id/Image"
-                android:layout_weight="1"
-                android:gravity="left|center"
-                android:text="Cat Level"
-                android:textAppearance="@style/InfoFont" />
-
-            <TextView
                 android:id="@+id/dogLevel"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@id/Image"
                 android:layout_weight="1"
                 android:gravity="left|center"
@@ -81,15 +78,26 @@
                 android:textAppearance="@style/InfoFont" />
 
             <TextView
+                android:id="@+id/catLevel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/Image"
+                android:layout_weight="1"
+                android:gravity="left|center"
+                android:text="Cat Level"
+                android:textAppearance="@style/InfoFont" />
+
+            <TextView
                 android:id="@+id/homeAlone"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@id/Image"
                 android:layout_weight="1"
                 android:gravity="left|center"
                 android:text="Home Alone Level"
                 android:textAppearance="@style/InfoFont" />
         </LinearLayout>
+
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
