--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,17 +21,13 @@
 
     <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="MyCustomTheme" parent="@android:style/Theme.Holo.Light">
-        <item name="android:actionBarStyle">@style/MyActionBarTheme</item>
-    </style>
-
     <style name="MyActionBarTheme" parent="@android:style/Widget.Holo.Light.ActionBar">
         <item name="android:background">#D5582D</item>
     </style>
 
     <style name="InfoFont" parent="@android:style/TextAppearance.Medium">
-        <item name="android:textColor">@color/colorPrimary</item>
-        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#111111</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
 
