--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,43 +18,6 @@
         android:scaleType="fitStart"
         app:srcCompat="@drawable/banner_horizontal" />
 
-    <TextView
-        android:id="@+id/adoptDogTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:textColor="#A5BE37"
-        android:text="adopt a dog"
-        android:textSize="65sp"
-        android:gravity="center"
-        android:onClick="dogAdoptClick"
-        android:padding="10dp"
-        android:shadowColor="@android:color/white"
-        android:shadowRadius="10"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif-condensed"/>
-
-    <TextView
-        android:id="@+id/adoptCatTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/adoptDogTextView"
-        android:textColor="#D5582D"
-        android:text="adopt a cat"
-        android:textSize="65sp"
-        android:gravity="center"
-        android:onClick="catAdoptClick"
-        android:padding="10dp"
-        android:shadowColor="@android:color/white"
-        android:shadowRadius="10"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif-condensed"/>
 
     <TextView
         android:id="@+id/textView"
@@ -68,11 +31,11 @@
         android:shadowDx="2"
         android:shadowDy="2"
         android:shadowRadius="10"
-        android:text="test tabs"
+        android:text="Available Pets"
         android:textColor="#A5BE37"
-        android:textSize="65sp"
+        android:textSize="50sp"
         android:textStyle="bold"
-        android:layout_below="@+id/adoptCatTextView"
+        android:layout_below="@+id/banner"
         android:layout_alignParentStart="true" />
 
 </RelativeLayout>
