--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,6 +28,7 @@
     <style name="InfoFont" parent="@android:style/TextAppearance.Medium">
         <item name="android:textColor">#111111</item>
         <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
 
