--- a/app/src/main/res/layout/fragment_tabbed.xml
+++ b/app/src/main/res/layout/fragment_tabbed.xml
@@ -2,21 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="0dp"
-    android:paddingRight="0dp"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_margin="0dp"
+        android:layout_margin="8dp"
         app:cardBackgroundColor="@color/colorPrimaryDark"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="0dp"
+        app:cardElevation="8dp"
         app:contentPadding="15dp">
 
         <LinearLayout
@@ -38,7 +33,7 @@
                     android:gravity="center_horizontal"
                     android:layout_weight="7"
                     android:cropToPadding="false"
-                    android:scaleType="centerCrop"
+                    android:scaleType="fitXY"
                     android:src="@mipmap/ic_launcher" />
 
                 <TextView
